welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: not found: value setBrosseCouleur
	setBrosseCouleur(c)
        ^FlowerPot:9: error: too many arguments for method droite: ()Unit
	droite(2)
              ^