welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c:Color) {
	setBrosseCouleur(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	droite(2)
}


def growFlowers() {
	
}

fleur(Color.RED)